deploy: 2dad5c8a4a23d4d7305dbae67e27450e6cfce622

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 <li><a href="https://github.com/shenmian/soukoban">ShenMian/soukoban</a>: 推箱子相关算法实现.</li>
 <li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子游戏实现, 使用 Bevy 引擎.</li>
 </ul>
-<h2 id="拓展阅读"><a class="header" href="#拓展阅读">拓展阅读</a></h2>
+<h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
 <p>推荐视频 🎥:</p>
 <ul>
 <li><a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>: 该视频详细介绍了推箱子的历史和发展.</li>
