--- a/level/run_length_encoding.html
+++ b/level/run_length_encoding.html
@@ -267,7 +267,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
     Ok(result)
 }
 </code></pre>
-<h2 id="拓展阅读"><a class="header" href="#拓展阅读">拓展阅读</a></h2>
+<h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Run-length_encoding">https://en.wikipedia.org/wiki/Run-length_encoding</a>.</li>
 </ul>
