--- a/introduction.html
+++ b/introduction.html
@@ -177,7 +177,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<p>本文将描述如何实现一个推箱子游戏 📦, 代码示例使用 Rust 语言 🦀 编写.</p>
+<p>本文将描述如何实现一个推箱子 📦, 示例代码使用 Rust 语言 🦀 编写.</p>
 <h2 id="推箱子的起源"><a class="header" href="#推箱子的起源">推箱子的起源</a></h2>
 <p>推箱子在 1981 年由日本人今林宏行(いまばやし ひろゆき)所创造, 第一个版本于 1982 年 12 月发行, 名为<em>仓库番</em>, 字面意思为 "仓库管理员".<sup class="footnote-reference"><a href="#1">1</a></sup> 英文名为: Sokoban 或 Soukoban.</p>
 <p><img src="assets/first_sokoban_15.png" alt="First Sokoban #15" /></p>
@@ -185,14 +185,14 @@
 <p><img src="assets/the_sokoban.jpg" alt="The Sokoban" /></p>
 <p>可惜是最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进, 本文后续将介绍一种纯鼠标控制的角色控制方法 🖱️.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
-<p>本文以 "推箱子" 游戏为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
+<p>本文以推箱子为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
 <ul>
 <li>结合实例的学习可以将<strong>知识</strong>和<strong>应用</strong>结合在一起, 使读者无需被 "学这个有什么用?" 所困扰.</li>
 <li>提供丰富的实例. 推箱子问题本身还附带了许多子问题, 很适合作为例子使用.</li>
 <li>众多读者对游戏有浓厚的兴趣 🎮.</li>
 </ul>
 <h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
-<p>之所以选择推箱子游戏, 是因为它具有以下特点:</p>
+<p>之所以选择推箱子, 是因为它具有以下特点:</p>
 <ul>
 <li><strong>规则简单</strong>. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
 <li><strong>基本功能易于实现</strong>, 如推箱子和通关判断.</li>
@@ -212,7 +212,7 @@
 <p>完整的项目代码位于:</p>
 <ul>
 <li><a href="https://github.com/shenmian/soukoban">ShenMian/soukoban</a>: 推箱子相关算法实现.</li>
-<li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子游戏实现, 使用 Bevy 引擎.</li>
+<li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子实现, 使用 Bevy 引擎.</li>
 </ul>
 <h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
 <p>推荐视频 🎥:</p>
