--- a/introduction.html
+++ b/introduction.html
@@ -204,7 +204,7 @@
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
 但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
-<li>Rust 语言本身. 本文中出现的算法适用于其他编程语言, 不会专门介绍 Rust 语言的特性.</li>
+<li>Rust 语言本身. 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
 <li>游戏引擎. 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
 <li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
 </ul>
