deploy: f61f9b9637628aaa195b59d9596553ee69d3eaa4

--- a/level/index.html
+++ b/level/index.html
@@ -202,10 +202,10 @@ Author: Thinking Rabbit
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>ASCII 符号</th><th>描述</th></tr></thead><tbody>
 <tr><td><code>&lt;SPACE&gt;</code>/<code>-</code>/<code>_</code></td><td>地板</td></tr>
-<tr><td><code>#</code></td><td>墙体</td></tr>
-<tr><td><code>$</code></td><td>箱子</td></tr>
-<tr><td><code>.</code></td><td>目标</td></tr>
-<tr><td><code>@</code></td><td>玩家</td></tr>
+<tr><td><code>#</code></td><td>墙体 🧱</td></tr>
+<tr><td><code>$</code></td><td>箱子 📦</td></tr>
+<tr><td><code>.</code></td><td>目标 🎯</td></tr>
+<tr><td><code>@</code></td><td>玩家 👷</td></tr>
 <tr><td><code>+</code></td><td>位于目标上的玩家</td></tr>
 <tr><td><code>*</code></td><td>位于目标上的箱子</td></tr>
 </tbody></table>
