--- a/print.html
+++ b/print.html
@@ -249,10 +249,10 @@ Author: Thinking Rabbit
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>ASCII 符号</th><th>描述</th></tr></thead><tbody>
 <tr><td><code>&lt;SPACE&gt;</code>/<code>-</code>/<code>_</code></td><td>地板</td></tr>
-<tr><td><code>#</code></td><td>墙体</td></tr>
-<tr><td><code>$</code></td><td>箱子</td></tr>
-<tr><td><code>.</code></td><td>目标</td></tr>
-<tr><td><code>@</code></td><td>玩家</td></tr>
+<tr><td><code>#</code></td><td>墙体 🧱</td></tr>
+<tr><td><code>$</code></td><td>箱子 📦</td></tr>
+<tr><td><code>.</code></td><td>目标 🎯</td></tr>
+<tr><td><code>@</code></td><td>玩家 👷</td></tr>
 <tr><td><code>+</code></td><td>位于目标上的玩家</td></tr>
 <tr><td><code>*</code></td><td>位于目标上的箱子</td></tr>
 </tbody></table>
@@ -511,7 +511,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Run-length_encoding">https://en.wikipedia.org/wiki/Run-length_encoding</a>.</li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="构建"><a class="header" href="#构建">构建</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="构建-"><a class="header" href="#构建-">构建 🏗️</a></h1>
 <h2 id="从-xsb-格式字符串构建关卡"><a class="header" href="#从-xsb-格式字符串构建关卡">从 XSB 格式字符串构建关卡</a></h2>
 <p>关卡解析可以分为两部分: 地图解析, 元数据和注释解析.</p>
 <p>关联函数 <code>Level::from_str</code> 只负责解析关卡的元数据和注释, 地图数据的进一步解析则由 <code>Map::from_str</code> 负责:</p>
