--- a/level/construction.html
+++ b/level/construction.html
@@ -176,7 +176,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="构建"><a class="header" href="#构建">构建</a></h1>
+                        <h1 id="构建-"><a class="header" href="#构建-">构建 🏗️</a></h1>
 <h2 id="从-xsb-格式字符串构建关卡"><a class="header" href="#从-xsb-格式字符串构建关卡">从 XSB 格式字符串构建关卡</a></h2>
 <p>关卡解析可以分为两部分: 地图解析, 元数据和注释解析.</p>
 <p>关联函数 <code>Level::from_str</code> 只负责解析关卡的元数据和注释, 地图数据的进一步解析则由 <code>Map::from_str</code> 负责:</p>
