deploy: ca831e87b47f700bab228decc2aa8436800a4ac5

--- a/print.html
+++ b/print.html
@@ -1025,7 +1025,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 <p><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A*">IDA* 搜索算法</a>.</p>
 </li>
 <li>
-<p><a href="https://ieeexplore.ieee.org/document/9231929">FESS 搜索算法</a>: 该算法被知名推箱子求解器 <a href="https://festival-solver.site/">Festival</a> 所使用.</p>
+<p><a href="https://ieeexplore.ieee.org/document/9231929">FESS 搜索算法</a>: 该算法被推箱子求解器 <a href="https://festival-solver.site/">Festival</a> 所使用.</p>
 <p>A* 和 IDA* 只通过单个启发式函数值值来选择下一个探索的节点.<br />
 可以通过计算出多个启发式函数值, 将它们融合为单个启发式函数值, 以同时利用多种启发式函数.
 这种方法简单有效, 但由于多个启发式函数值被融合为了一个, 因此无法区分单个启发式函数值的变化趋势.</p>
