--- a/level/index.html
+++ b/level/index.html
@@ -215,7 +215,7 @@ Author: Thinking Rabbit
 <p>!!! info
 多行注释还存在一种以 <code>comment:</code> 和 <code>comment_end:</code> 包裹的写法, 与之前提到的多行注释不同，这种多行注释使用下划线(<code>_</code>)来替代连字符(<code>-</code>)分割单词.<br />
 本文将这种格式视为<strong>无效格式</strong>, 其可能是在批量替换 <code>_</code> 和 <code>-</code> 字符时意外产生的.</p>
-<p>关卡可能通过游程编码压缩, 请参见<a href="run_length.html">游程编码</a>.</p>
+<p>关卡可能通过游程编码压缩, 请参见<a href="run_length_encoding.html">游程编码</a>.</p>
 <h2 id="其他格式"><a class="header" href="#其他格式">其他格式</a></h2>
 <h3 id="sok"><a class="header" href="#sok">Sok</a></h3>
 <p>推箱子程序 Sokoban YASC 专用格式, 兼容 XSB 格式:</p>
@@ -232,7 +232,7 @@ ___###__
 
 Author: Thinking Rabbit
 </code></pre>
-<p>请参见 <a href="http://sokobano.de/wiki/index.php?title=Sok_format">Sok format · Sokoban Wiki</a></p>
+<p>请参见 <a href="http://sokobano.de/wiki/index.php?title=Sok_format">Sok format · Sokoban Wiki</a>.</p>
 <h3 id="mf8"><a class="header" href="#mf8">MF8</a></h3>
 <p>中文论坛魔方吧<sup class="footnote-reference"><a href="#1">1</a></sup>使用 MF8 格式:</p>
 <pre><code class="language-txt">[soko=8,8]
