--- a/level/representation.html
+++ b/level/representation.html
@@ -177,7 +177,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="表示"><a class="header" href="#表示">表示</a></h1>
-<h2 id="表示地图"><a class="header" href="#表示地图">表示地图</a></h2>
+<h2 id="表示地图-"><a class="header" href="#表示地图-">表示地图 🗺️</a></h2>
 <p>地图共包含 5 种元素, 这些元素可能在一个格子内叠加(比如玩家位于目标上).<br />
 最小的数据存储单元字节包含 8 个比特, 足以表示 5 种元素. 因此可以使用一个字节的空间来存储单个地图格子, 其中的每个比特表示一种地图元素.<br />
 创建用于表示地图元素的比特位:</p>
@@ -193,6 +193,7 @@ bitflags! {
     }
 }
 </code></pre>
+<p>这样便可以使用 <code>Tiles::Floor | Tiles::Goal | Tiles::Player</code> 来表示玩家位于目标上, 而目标位于地板上的情况.</p>
 <p>使用一维数组来存储地图数据, 使用二维向量(数学)存储地图尺寸.</p>
 <pre><code class="language-rs">use nalgebra::Vector2;
 
